fix:alignment of show more button

--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ body {
   background-color: #1471FF;
   color: white;
   width:280px;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
 }
 
 
